going to gradle?

--- a/README
+++ b/README
@@ -7,17 +7,13 @@ Homework #2 for CS324. A 2D graphics demonstration for Java.
 COMPILING
 =========
 
-To build this project, simply run the Make utility.
-
-$ make
+TBD
 
 
 RUNNING
 =======
 
-Run this application like any other command line Java application.
-
-$ java Gfx2d
+TBD
 
 
 CREDITS
